# android-rust

./: .gitignore  Cargo.toml  cargo-config.toml  install.sh  output.txt  requirements.txt
.cargo/: config.toml
android/Greetings/gradle/wrapper/: gradle-wrapper.properties
android/RustHello/app/: RustGreetings.java
android/RustHello/app/src/main/java/com/example/rusthello/ui/theme/: RustGreetings.java
android/c_bindgen/: settings.gradle
android/c_bindgen/app/: build.gradle
android/c_bindgen/app/src/androidTest/java/com/example/c_bindgen/: ExampleInstrumentedTest.kt
android/c_bindgen/app/src/main/: AndroidManifest.xml
android/c_bindgen/app/src/main/cpp/: CMakeLists.txt  lib.h  native-lib.cpp
android/c_bindgen/app/src/main/java/com/example/c_bindgen/: MainActivity.kt
android/c_bindgen/app/src/main/res/values/: strings.xml  themes.xml
android/c_bindgen/app/src/main/res/values-night/: themes.xml
android/c_bindgen/app/src/test/java/com/example/c_bindgen/: ExampleUnitTest.kt
android/c_bindgen/gradle/wrapper/: gradle-wrapper.properties
examples/: server.rs
src/: coap_client.rs  coap_server.rs  dtls.rs  keys.rs  lib.rs
toolchain/: aarch64-linux-android.cmake  armv7-linux-androideabi.cmake  x86_64-linux-android.cmake
