[package]
name = "rust"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.28.0", features=["sync", "rt-multi-thread", "rt", "macros", "time"]}
simple_logger = "4.1.0"
log = "0.4.17"
rand = "0.8.5"
jni = { version = "0.10.2", default-features = false }
android_log = "0.1.3"
# webrtc-dtls = "0.7.2"
coap = "0.12"
coap-lite = "0.9.1"

